# email-marketing-bible

./: .gitignore  CLAUDE.md  README.md  SKILL.md  george-voice-guide.md  landing-page-design-prompt.md  launch-posts.md  memory.md  plan.md
cold_email_tool/: ARCHITECTURE.md  __init__.py  __main__.py  app.py  cli.py  pyproject.toml
cold_email_tool/core/: config.py  email_generator.py  enrichment.py  formatter.py  models.py  pipeline.py  researcher.py  search.py
cold_email_tool/examples/: sample_contacts.csv  sample_contacts.json  sample_output.md  sample_sparse.csv
cold_email_tool/prompts/: templates.py
emb-research/: EMB_v4_part1.md  EMB_v4_part2.md  EMB_v4_part3.md  EMB_v4_part4.md
